--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,6 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>Number: {{ n }} {{status}}</H1>
+        <H1>Number: {{ n }} {{ i }}</H1>
     </BODY>
 </HTML>
